--- a/css.css
+++ b/css.css
@@ -12,6 +12,7 @@ html, body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #canvas5 {
@@ -108,7 +109,7 @@ html, body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin-top: 40vw;
+    margin-top: 10vw;
   }
 }
 
