--- a/css.sass
+++ b/css.sass
@@ -24,7 +24,7 @@ html,body
     display: flex
     justify-content: center
     align-items: center
-    
+    font-family: Arial, Helvetica, sans-serif
 #canvas5
     max-width: 100%
     height: 100%
@@ -78,7 +78,7 @@ html,body
     @include breakpoint(mobile)
         width: 100%
         flex-direction: column
-        margin-top: 40vw
+        margin-top: 10vw
     .text
         flex: 2
         color: white
